[package]
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
description = "Nitori Bot for Twitter"
license = "AGPL-3.0"
name = "nitori"
repository = "https://github.com/tirr-c/nitori.git"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
error-chain = "0.11.0"
futures = "0.1.17"
lazy_static = "0.2.10"
tokio-core = "0.1.10"
tokio-timer-plus = "0.1.3"
twitter-stream = "0.5.3"
twox-hash = "1.1.0"

[dependencies.egg-mode]
git = "https://github.com/QuietMisdreavus/twitter-rs.git"
